# elysian-legacy-2

./: Cargo.toml
src/: compose.rs  context.rs  field_traits.rs  fn_traits.rs  lib.rs  lifting.rs  util.rs
src/combine/: blend.rs  evaluate.rs  mod.rs
src/fields/: capsule.rs  chebyshev.rs  circle.rs  infinity.rs  line.rs  mod.rs  neg_infinity.rs  point.rs  quad.rs  ring.rs  taxicab.rs  triangle.rs
src/modifiers/: ambient_light.rs  aspect_adaptive_plus.rs  aspect_horizontal_plus.rs  aspect_vertical_minus.rs  bounding_error_to_color.rs  demanifold.rs  derive_bounding_error.rs  derive_support_function.rs  derive_tangent.rs  directional_light.rs  distance_to_color.rs  elongate.rs  elongate_axes.rs  gradient_to_color.rs  isomanifold.rs  isosurface.rs  light_to_color.rs  lighting.rs  manifold.rs  mod.rs  offset_uv.rs  reflect.rs  rotate.rs  scale.rs  scale_height.rs  scale_uv.rs  support_to_color.rs  tangent_to_color.rs  translate.rs  twist.rs  uv_to_color.rs  wrap_uv.rs
