[package]
name = "elysian"
version = "0.1.0"
edition = "2021"

[features]
default = ["glam"]
glam = ["rust-gpu-bridge/glam"]
spirv-std = ["dep:spirv-std", "rust-gpu-bridge/spirv-std"]

[dependencies]
rust-gpu-bridge = { git = "https://github.com/bevy-rust-gpu/rust-gpu-bridge", tag = "v0.5.0" }
spirv-std = { version = "0.8", optional = true }
